--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -25,7 +25,7 @@
 		<button class="btn btn-success btn-sm" 
 			title="Submit for {{buttons.next}}" 
 			ng-click="submit()" 
-			ng-if="rolePermissions[artifact.stage]">Submit for {{buttons.next}}</button>
+			ng-if="rolePermissions[artifact.stage] && !artifact.isPublished">Submit for {{buttons.next}}</button>
 	</div>
 </div>
 
