ESM-313: show map for everyone, no need to use any funky logic to hide it.

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -110,7 +110,7 @@
 				<div class="panel-heading">
 					<h2>Project Map</h2>
 				</div>
-				<tmpl-map id="anchor-map" x-project="project" ng-if="('project'| shouldDisplayPanel:'map':project.status)"></tmpl-map>
+				<tmpl-map id="anchor-map" x-project="project"></tmpl-map>
 			</div>
 		</section>
 
