--- a/modules/artifacts/client/views/artifact-list-chooser.html
+++ b/modules/artifacts/client/views/artifact-list-chooser.html
@@ -1,5 +1,6 @@
 
 <div class="modal-header">
+  <button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
   <h3 class="modal-title">Project Content</h3>
 </div>
 
