--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -50,7 +50,8 @@
 						<button type="button" class="btn btn-default btn-sm"
 							x-email-template-chooser
 							x-project="project"
-							x-current="emailTemplate">Use Existing Template</button>
+							x-current="emailTemplate"
+              x-group-restricted="'invitation'">Use Existing Template</button>
 					</div>
 					<div class="form-group" x-show-errors>
 						<label class="control-label">Subject<em class="required">(Required)</em></label>
