--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -35,7 +35,7 @@
 						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
 					</div>
 					<div class="form-group">
-						<button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate">Use Existing Template</button>
+						<button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate" x-group-allowed="'invitation'">Use Existing Template</button>
 					</div>
 					<div class="form-group" x-show-errors>
 						<label class="control-label">Subject<em class="required">(Required)</em></label>
