ESM-605 - Organization Sort
- Fixed an issue where the clicking on the Type header to sort would also highlight and attempt to sort the Display Name column

--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -22,7 +22,7 @@
 					sortable="'company'">{{o.company}}</td>
 				<td data-title="'Type'"
 					filter="{'companyType':'text'}"
-					sortable="'company'">{{o.companyType}}</td>
+					sortable="'companyType'">{{o.companyType}}</td>
 				<td data-title="'Company Legal'"
 					filter="{'companyLegal':'text'}"
 					sortable="'companyLegal'">{{o.companyLegal}}</td>
