Fixed issue where valued components would appear out of order (by ID)
- Not sorting by name
- Valued components added in the public comment period details now appear alphabetically
- Updated the 'add valued component' button to conform with standard 'tag-list' paradigm.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4183,12 +4183,8 @@ section {
 		}
 	}
 
-	section {
-		margin-bottom: 2.5rem;
-		padding-bottom: 0;
-		border: none;
-
-		&:last-child {
+	form {
+		.form-group:last-child {
 			margin-bottom: 0;
 		}
 	}
@@ -4262,7 +4258,7 @@ section {
 	}
 
 	.comment-body {
-		margin-bottom: 0;
+		margin: 0;
 		max-height: 40rem;
 		overflow-y: auto;
 
