Fixed a small styling issue with public comment modal

--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="upload-attachments form-group col-sm-12">
+				<div class="upload-attachments form-group no-margin col-sm-12">
 					<label class="control-label">Upload Attachments</label>
 
 					<div class="alert alert-danger alert-dismissable" ng-show="s.filesRemoved">
