ESM-600: Containing view of internal docs to specific roles.

--- a/modules/artifacts/client/views/partial.artifact.artifacts.html
+++ b/modules/artifacts/client/views/partial.artifact.artifacts.html
@@ -43,7 +43,7 @@
          editable="editable"></div>
   </div>
 
-  <div class="col-sm-12" ng-hide="!authentication.user && !authentication.user._id">
+  <div class="col-sm-12" ng-hide="!authentication.user && !authentication.user._id || !artifact.canSeeInternalDocuments">
     <div x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project"
          editable="editable"></div>
   </div>
