--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -27,7 +27,7 @@
     <section>
         <div x-content-document ng-model="artifact.additionalDocuments" title="'Additional Documents'" project="project" artifact="artifact" doc-location-code="additional" editable="mode === 'edit'"></div>
     </section>
-    <section ng-hide="!authentication.user && !authentication.user._id">
+    <section ng-hide="!authentication.user && !authentication.user._id || !artifact.canSeeInternalDocuments">
         <div x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project" artifact="artifact" doc-location-code="internal" editable="mode === 'edit'"></div>
     </section>
     <!-- / SUPPORTING, ADDITIONAL, INTERNAL DOCUMENTS -->
