--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -20,7 +20,7 @@
 		</div>
 		<button class="btn btn-success btn-sm"
 				title="Update (Re-publish)"
-				ng-if="artifact.isPublished && rolePermissions['Publishing']"
+				ng-if="artifact.isPublished && rolePermissions['Publish']"
 				ng-click="update()">Update</button>
 		<button class="btn btn-success btn-sm" 
 			title="Submit for {{buttons.next}}" 
