NOBUG: Disallow editing of schedule UI if they can't editSchedule.

--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -57,7 +57,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="pull-right">
+						<div ng-if="project.userCan.editSchedule"
+							class="pull-right">
 							<button class="btn btn-default btn-sm" title="Remove Phase from Schedule"
 									ng-click="selectPhase(phase)"
 									ng-if="phase.code !== 'intake'"
