--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -6,7 +6,9 @@
 			<div class="actions-group" ng-if="environment === 'EAO' && authentication.user">
 				<a class="btn btn-default btn-sm" ui-sref="p.edit({pId:o._id})" ng-if="project.userCan.write">
 					<span class="glyphicon glyphicon-pencil"></span><span>Edit Project</span></a>
-				<a class="btn btn-success btn-sm" ng-click="publishProject()" ng-if="!project.isPublished">Publish Project</a>
+				<a class="btn btn-success btn-sm"
+					ng-click="publishProject()"
+					ng-if="project.userCan.publish && !project.isPublished">Publish Project</a>
 			</div>
 			<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="project"></tmpl-permissions-gear>
 		</div>
