--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -15,11 +15,11 @@
 			</div>
 		</div>
 		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table">
+			<table ng-table="tableParams" x-show-filter="true" class="table">
 				<!-- NEWS ROW ITEM TEMPLATE -->
 				<tr ng-repeat="o in $data">
-					<td data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
-						<a ui-sref="p.detail({projectid: o.code})" ><h2 class="news-title">{{o.headline}}</h2></a>
+					<td data-title="'Headline'" filter="{'headline':'text'}" sortable="'headline'">
+            <h2 class="news-title" ng-class="{clickable: o.project}" ng-click="s.onNewsClick(o, $event)">{{o.headline}}</h2>
 						<div ng-init="toggleProject.desc = (false)">
 							<p class="news-content">{{ o.content | maxWords:30:toggleProject.desc }}</p>
 							<div class="show-more" ng-if="(o.content | wordCount) > 30">
@@ -30,8 +30,33 @@
 							</div>
 						</div>
 					</td>
-					<td class="type-col" header-class="'type-col'" data-title="'Category'" filter="{'type':'text'}" sortable="'type'">{{o.type}}</td>
-					<td class="date-col" header-class="'date-col'" data-title="'Date Added'" sortable="'dateAdded'" >{{o.dateAdded | date}}</td>
+          <td class="type-col"
+              header-class="'type-col'"
+              data-title="'Project'"
+              filter="{'projectName':'text'}"
+              sortable="'projectName'">{{o.projectName}}</td>
+					<td class="type-col"
+              header-class="'type-col'"
+              data-title="'Type'"
+              filter="{type:'select'}"
+              filter-data="s.typeArray"
+              sortable="'type'">{{o.type}}</td>
+					<td class="date-col"
+              header-class="'date-col'"
+              data-title="'Date Added'"
+              sortable="'dateAdded'" >{{o.dateAdded | date}}</td>
+          <td class="date-col"
+              header-class="'date-col'"
+              data-title="'Priority'"
+              filter="{priorityDesc:'select'}"
+              filter-data="s.priorityDescArray"
+              sortable="'priorityDesc'" >{{o.priorityDesc}}</td>
+          <td class="date-col"
+              header-class="'date-col'"
+              data-title="'Active'"
+              filter="{activeDesc:'select'}"
+              filter-data="s.activeDescArray"
+              sortable="'activeDesc'" >{{o.activeDesc}}</td>
 
 					<!-- <td data-title="'Priority'" class="text-center" sortable="'priority'" >{{o.priority}}</td> -->
 
