--- a/modules/recent-activity/client/views/recent-activity-news-list.html
+++ b/modules/recent-activity/client/views/recent-activity-news-list.html
@@ -9,8 +9,8 @@
 		<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed">
 			<!-- NEWS ROW ITEM TEMPLATE -->
 			<tr ng-repeat="o in $data">
-				<td data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
-					<a ui-sref="p.detail({projectid: o.code})" ><h2 class="news-title">{{o.headline}}</h2></a>
+				<td data-title="'Headline'" filter="{'headline':'text'}" sortable="'headline'">
+          <h2 class="news-title" ng-class="{clickable: o.project}" ng-click="s.onNewsClick(o, $event)">{{o.headline}}</h2>
 					<div ng-init="toggleProject.desc = (false)">
 						<p class="news-content">{{ o.content | maxWords:30:toggleProject.desc }}</p>
 						<div class="show-more" ng-if="(o.content | wordCount) > 30">
@@ -23,7 +23,7 @@
 						</div>
 					</div>
 				</td>
-				<td class="type-col" header-class="'type-col'" data-title="'Category'" filter="{'type':'text'}" sortable="'type'">{{o.type}}</td>
+				<td class="type-col" header-class="'type-col'" data-title="'Type'" filter="{'type':'text'}" sortable="'type'">{{o.type}}</td>
 				<td class="date-col" header-class="'date-col'" data-title="'Date'" sortable="'dateAdded'" >{{o.dateAdded | date}}</td>
 			</tr><!-- / NEWS ROW ITEM TEMPLATE -->
 			<tr ng-if="!$data || $data.length === 0">
