ESM-630 - Invitation Message Body fix
- Fixing the text area styling/appearance on the message text input field

--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -43,7 +43,9 @@
 					</div>
 					<div class="form-group no-margin" x-show-errors>
 						<label class="control-label">Message<em class="required">(Required)</em></label>
-						<textarea ui-tinymce="tinymceOptions" type="text" ng-model="s.communication.templateContent" id="message" name="message"
+						<textarea class="form-contro" type="text" id="message" name="message"
+							ui-tinymce="tinymceOptions"
+							ng-model="s.communication.templateContent"
 							title="Message" required ng-blur="activeItem = false"></textarea>
 					</div>
 				</div>
