--- a/modules/artifacts/client/views/artifact-review.html
+++ b/modules/artifacts/client/views/artifact-review.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<h1>{{artifact.name}}&nbsp;<span class="placeholder-value">({{artifact.version}})</span></h1>
+	<h1>{{artifact.name}}</h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view">Cancel</a>
 		<button class="btn btn-danger btn-sm" title="Reject and return for {{buttons.prev}}" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject</button>
@@ -10,12 +10,12 @@
 
 <div class="view-body-container">
 	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-	
+
 	<div class="form-group">
 		<label class="control-label">Review Notes</label>
 		<textarea class="form-control" rows="5" ng-model="artifact.reviewnote" ng-if="rolePermissions[artifact.stage]"></textarea>
 	</div>
-	
+
 	<div class="form-footer clearfix">
 		<div class="pull-right">
 			<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view">Cancel</a>
