--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -43,7 +43,7 @@
 					</div>
 					<div class="form-group no-margin" x-show-errors>
 						<label class="control-label">Message<em class="required">(Required)</em></label>
-						<textarea class="form-contro" type="text" id="message" name="message"
+						<textarea class="form-control" id="message" name="message"
 							ui-tinymce="tinymceOptions"
 							ng-model="s.communication.templateContent"
 							title="Message" required ng-blur="activeItem = false"></textarea>
