--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -50,7 +50,7 @@
           <td class="type-col"
               header-class="'type-col'"
               data-title="'Active'"
-              filter="{activeDesc:'select'}"
+              filter="{active:'select'}"
               filter-data="s.activeDescArray"
               sortable="'activeDesc'" >{{o.activeDesc}}</td>
           <td class="date-col"
