MEM Import adjustments, and enabling feature on/off for admin features, general application features, and changing UI and model of project tombstone for Mine status.

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -252,8 +252,8 @@
 			<span class="value">{{ ::project.memPermitID }}</span>
 		</div>
 		<div class="detail-row">
-			<label>Phase:</label>
-			<span class="value">{{ ::project.currentPhase.name }}</span>
+			<label>Status:</label>
+			<span class="value">{{ ::project.mineStatus }}</span>
 		</div>
 		<div class="detail-row">
 			<label>Region:</label>
