--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -32,7 +32,7 @@
 		</div>
 
 		<!-- PROJECT TIMELINE -->
-		<div class="panel panel-default">
+		<div class="panel panel-default" ng-if="FEATURES.enableTimeline === 'true'">
 			<div class="panel-heading"><h2>Project Timeline</h2></div>
 			<div class="project-timeline-container clearfix">
 				<div class="phase"
