ESM-629 - Edit Profile View Field Adjustments
- Removed display name and username fields
- Removed additional notes field

Additional Fixes
- organization-view.html - cleaned up code and fixed an incorrect selector name on the actions buttons
- organization-edit.html - fixed incorrect icon for delete button
- organization-user-edit.html - moved the street address fields above city/province/country/postal fields to fall inline with other views.

- project.entry.html - removed the disabled property on the submit project button to allow validation to fire when clicked
- project.client.controllers.js - added code to ensure validation fires on submit button click.

--- a/modules/organizations/client/views/organization-user-edit.html
+++ b/modules/organizations/client/views/organization-user-edit.html
@@ -92,6 +92,18 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<div class="form-group" x-show-errors>
+						<label for="address1" class="control-label">Street Address 1<em ng-if="user.viaMail">(Required)</em></label>
+						<input class="form-control" id="address1" name="address1" type="text" ng-model="user.address1" ng-required="user.viaMail">
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="form-group">
+						<label for="address1" class="control-label">Street Address 2<em>(Optional)</em></label>
+						<input class="form-control" id="address2" type="text" ng-model="user.address2">
+					</div>
+				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group" x-show-errors>
 						<label for="city" class="control-label">City<em ng-if="user.viaMail">(Required)</em></label>
@@ -117,20 +129,6 @@
 						<div ng-messages="userForm.postalCode.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">* Required.</p>
 						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-12 col-md-6">
-					<div class="form-group" x-show-errors>
-						<label for="address1" class="control-label">Street Address 1<em ng-if="user.viaMail">(Required)</em></label>
-						<input class="form-control" id="address1" name="address1" type="text" ng-model="user.address1" ng-required="user.viaMail">
-					</div>
-				</div>
-				<div class="col-sm-12 col-md-6">
-					<div class="form-group">
-						<label for="address1" class="control-label">Street Address 2</label>
-						<input class="form-control" id="address2" type="text" ng-model="user.address2">
 					</div>
 				</div>
 			</div>
