--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -137,23 +137,20 @@
 				<div class="panel panel-default">
 					<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 						<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.detail({orgId: org._id, userId: o._id})">
-							<td data-title="'Name'"  filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}</td>
-							<td data-title="'Username'"  filter="{'username':'text'}" sortable="'username'">{{o.username}}</td>
-							<td data-title="'Email'" filter="{'email':'text'}"    sortable="'email'" >{{o.email}}</td>
-							<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-								<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
+							<td data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}</td>
+							<td data-title="'Username'" filter="{'username':'text'}" sortable="'username'">{{o.username}}</td>
+							<td data-title="'Email'" filter="{'email':'text'}" sortable="'email'" >{{o.email}}</td>
+							<td class="actions-col action-x2" header-class="'actions-col action-x2'">
+								<a  class="btn btn-default btn-sm" ng-click="$event.stopPropagation()" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
 									<span class="glyphicon glyphicon-pencil"></span>
 								</a>
-							</td>
-							<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-								<a title="Remvoe User from Organization" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)"
-									class="btn btn-link btn-sm">
+								<a class="btn btn-default btn-sm" title="Remvoe User from Organization" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)">
 									<span class="glyphicon glyphicon-trash"></span>
 								</a>
 							</td>
 						</tr>
-						<tr ng-show="!$data || !$data.length" class="text-center">
-							<td colspan="5">No records found.</td>
+						<tr class="no-records" ng-show="!$data || !$data.length" class="text-center">
+							<td colspan="2">No records found.</td>
 						</tr>
 					</table>
 				</div>
