ESM-609: support for project roles users import.

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -51,6 +51,8 @@
 							<option ng-if="environment === 'EAO'" value="/api/users/import" label="EAO Contacts">EAO Contacts</option>
 							<option ng-if="environment === 'EAO'" value="/api/groupusers/import" label="EAO Group Contacts">EAO Group Contacts</option>
 							<option ng-if="environment === 'EAO'" value="/api/documents/import" label="EAO Documents">EAO Documents</option>
+              <option ng-if="environment === 'EAO'" value="/api/userroles/project/import" label="EAO User Roles (Project)">EAO User Roles (Project)</option>
+              <option ng-if="environment === 'EAO'" value="/api/userroles/system/import" label="EAO User Roles (System)">EAO User Roles (System)</option>
 						</select>
 					</td>
 
