--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -58,6 +58,8 @@
   <!--Application JavaScript Files-->
   {% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
+  <script type="text/javascript" src="/dist/application.min.js"> </script>
+
   <script type="text/javascript" src="/dist/conf.js"> </script>
 
   {% if livereload %}
